27 Firebase Cloud Functions lesson finished.

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -3,10 +3,14 @@
     "module": "commonjs",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
+    "noImplicitAny": false,
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "lib": ["ESNext"],
+    "strictNullChecks": false,
+    "esModuleInterop": true
   },
   "compileOnSave": true,
   "include": [
